crates/toml_edit/tests/snapshots/invalid/integer/positive-bin.stderr
TOML parse error at line 1, column 16
  |
1 | positive-bin = +0b11010110
  |                ^
integers with a radix cannot be signed, expected nothing
